# xtazy-dealer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-ARAF  LICENSE-MIT  README.md
.github/release/: result_files.json
.github/release/templates/: targets.tsv.xtpl
.github/workflows/: ci.yml  docs-pages.yml  release.yml  rustdoc-pages.yml
.release-signing/: xtazy_dealer.private  xtazy_dealer.xsig
docs/: commands.md  install-and-update.md  project-build-flow.md  project-dependencies.md  project.md  release-dealer.md  toolchain.md  xtazy-parts.md
src/: app.rs  backend.rs  cli.rs  compiler.rs  doctor.rs  error.rs  main.rs  messages.rs  names.rs  project.rs  scaffold.rs  state.rs  test_support.rs  toolchain.rs  workflow.rs  xtazy.rs
src/compiler_contract/: contract.rs  executable.rs  mod.rs
src/constants/: components.rs  dirs.rs  executables.rs  files.rs  metadata.rs  mod.rs  protocol.rs  web.rs
src/package/: edit.rs  git.rs  install.rs  local.rs  mod.rs  outdated.rs  registry.rs  remove.rs  semver.rs  update.rs
src/project/: dealer_block.rs  dependency.rs  mod.rs  resolve.rs  root.rs
src/rust_backend/: cargo.rs  mod.rs
src/state/: config.rs  layout.rs  mod.rs  parts.rs
src/support/: archive.rs  checksum.rs  git.rs  host.rs  mod.rs  net.rs  signing.rs
src/toolchain/: components.rs  discover.rs  install.rs  mod.rs
src/trust/: master.public
src/update/: mod.rs  self_update.rs  xtazy_update.rs
src/workflow/: build.rs  check.rs  clean.rs  fmt.rs  layout.rs  mod.rs  run.rs  test.rs
