[package]
name = "xtazy-dealer"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "dealer package manager for the xtazy programming language"
keywords = ["xtazy", "dealer", "package-manager"]
license = "MIT OR ARAF"
repository = "https://github.com/xtazy-lang/xtazy-dealer"
homepage = "https://xtazy.dev/"

[[bin]]
name = "dealer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
directories = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"

