[package]
name = "xtazy-dealer"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "dealer package manager for the xtazy programming language"
keywords = ["xtazy", "dealer", "package-manager"]
license = "MIT OR ARAF"
repository = "https://github.com/xtazy-lang/xtazy-dealer"
homepage = "https://xtazy.dev/"

[[bin]]
name = "dealer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
directories = "5"
fd-lock = "4.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
xsig = { git = "https://github.com/xtazy-lang/xsig", version = "0.1.0" }
ureq = "2.10.1"
sha2 = "0.10"
hex = "0.4.3"
flate2 = "1.0.30"
tar = "0.4.41"
lzma-rust2 = "0.16.4"
gix = { version = "0.66", features = ["blocking-network-client", "worktree-mutation"] }
tempfile = "3"
